# blocques

./: Cargo.toml  README.md
src/: blocques.rs  main.rs  rendering.rs  utils.rs  world.rs
src/rendering/: shader.frag  shader.vert
src/world/: block.rs  chunk.rs
src/world/block/: face.rs
src/world/chunk/: adjacent_manager.rs  chunkarray.rs
