[package]
name = "blocques"
version = "0.1.0"
authors = ["SheepTester <ussa.say@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.27.0"
image = "0.23.6"
nalgebra = "0.21.1"
num-traits = "0.2.12"
noise = "0.6.0"
